Various content based updates - Rearranged libraries. - Added support for product image gallery and popup. - Cart block improvements.

--- a/web/themes/custom/commerce_2_demo/sass/custom/_site_footer.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_site_footer.scss
@@ -195,6 +195,12 @@
       text-decoration: underline;
     }
   }
+
+  @media (max-width: $screen-xs-max) {
+    span {
+      display: block;
+    }
+  }
 }
 
 /**
