--- a/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
@@ -104,8 +104,9 @@
 
           {# Acro Media Inc. #}
           <div class="site-footer__acro">
-            {{ 'Website design by'|t }} <a href="https://www.acromedia.com" target="_blank">{{ 'Acro Media Inc.' }}</a><br>
-            {{ 'Photos freely available from'|t }} <a href="https://www.unsplash.com" target="_blank">{{ 'Unsplash.com' }}</a>
+            <span>{{ 'Website design by'|t }} <a href="https://www.acromedia.com" target="_blank">{{ 'Acro Media Inc.' }}</a></span>
+            <span class="hidden-xs"> &nbsp; | &nbsp; </span>
+            <span>{{ 'Photos freely available from'|t }} <a href="https://www.unsplash.com" target="_blank">{{ 'Unsplash.com' }}</a></span>
           </div>
         </div>
       </div>
