--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_checkout.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_checkout.scss
@@ -130,25 +130,36 @@
           padding: 15px 5px;
         }
 
-        td.views-field-purchased-entity {
+        // Image.
+        td:nth-of-type(1) {
           width: 120px;
 
           @media (max-width: $screen-sm-max) {
             width: 100px;
           }
 
-          img {
-            width: 80px;
-            height: 80px;
-            border: 1px solid $gray;
-          }
+          .product__thumbnail__cart {
+            position: relative;
 
-          div.field {
-            display: none;
-          }
+            img {
+              width: 80px;
+              height: 80px;
+              border: 1px solid $gray;
+              transition: border .2s ease-in-out;
+            }
 
-          div.field--name-field-image {
-            display: block;
+            a {
+              position: absolute;
+              width: 100%;
+              height: 100%;
+              z-index: 1;
+              font-size: 0;
+
+              &:hover + img,
+              &:focus + img {
+                border: 1px solid $c-primary;
+              }
+            }
           }
         }
 
