--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
@@ -430,12 +430,6 @@
     }
   }
 
-  // Product images.
-  .field--name-field-image {
-    margin: 0 auto 40px;
-    border: 1px solid #ccc;
-  }
-
   // Product intro.
   .product__intro {
     padding-left: 30px;
@@ -583,6 +577,207 @@
       background-color: #000;
     }
   }
+}
+
+
+/**
+ * Product image slideshow.
+ */
+
+// Product Slider.
+.product-slider {
+  margin: 0 auto 50px auto;
+  padding: 0;
+  max-width: 500px;
+
+  @media (min-width: $screen-md-min) {
+    margin: 0 0 30px 0;
+    max-width: none;
+  }
+}
+
+// Product Slider - Main Slider.
+.product-slider__main-slider {
+  margin: 0 0 10px 0;
+  padding: 0;
+}
+.product-slider__main-slider__item {
+
+  a {
+    position: relative;
+    display: inline-block;
+    margin: 0 auto;
+    padding: 0;
+    text-decoration: none;
+    border: 1px solid $gray;
+
+    // Triangle.
+    &:before {
+      content: '';
+      position: absolute;
+      top: 1px;
+      left: 1px;
+      display: block;
+      width: 77px;
+      height: 77px;
+      border-top: 77px solid $gray-dark;
+      border-right: 77px solid transparent;
+      z-index: 30;
+      transition: color .2s ease-in-out, background-color .2s ease-in-out, border-color .2s ease-in-out;
+    }
+    // Zoom icon.
+    &:after {
+      @include fa-icon();
+      content: $fa-var-search-plus;
+      position: absolute;
+      top: 10px;
+      left: 11px;
+      color: #fff;
+      font-size: 23px;
+      z-index: 31;
+      transition: color .2s ease-in-out, background-color .2s ease-in-out, border-color .2s ease-in-out;
+    }
+
+    span {
+      position: relative;
+      display: block;
+      opacity: 1;
+      transition: opacity .2s ease-in-out;
+    }
+
+    &:hover,
+    &:focus {
+      border-color: $c-link;
+
+      &:before {
+        border-top: 77px solid $c-link;
+      }
+
+      span {
+        opacity: 0.9;
+      }
+    }
+  }
+  img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+// Product Slider - Nav Slider.
+.product-slider--no-thumbnails .product-slider__nav-slider {
+  display: none;
+}
+.product-slider__nav-slider {
+  margin: 0;
+  padding: 0 40px;
+
+  // Slider arrows.
+  .slick-prev,
+  .slick-next {
+    position: absolute;
+    bottom: 0;
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: auto;
+    height: 100%;
+    font-size: 0;
+    line-height: 1.0;
+    background: none;
+    border: none;
+    outline: none;
+    vertical-align: middle;
+    z-index: 30;
+  }
+
+  .slick-prev {
+    left: 3px;
+
+    // Arrow.
+    &:before {
+      @include fa-icon();
+      content: $fa-var-angle-left;
+      display: inline-block;
+      margin: 0;
+      padding: 0;
+      color: $gray-dark;
+      font-size: 50px;
+      text-align: center;
+      outline: none;
+      transition: opacity .2s ease-in-out;
+    }
+    &:hover:before {
+      opacity: 0.8;
+    }
+  }
+  .slick-next {
+    right: 3px;
+
+    // Arrow.
+    &:before {
+      @include fa-icon();
+      content: $fa-var-angle-right;
+      display: inline-block;
+      margin: 0;
+      padding: 0;
+      color: $gray-dark;
+      font-size: 50px;
+      text-align: center;
+      outline: none;
+      transition: opacity .2s ease-in-out;
+    }
+    &:hover:before {
+      opacity: 0.8;
+    }
+  }
+  .slick-next,
+  .slick-prev {
+    &.slick-disabled {
+      // Arrow.
+      &:before {
+        color: #ccc;
+        opacity: 1;
+      }
+    }
+  }
+}
+.product-slider__nav-slider__item {
+  position: relative;
+  display: block;
+  margin: 2px 10px;
+  padding: 0;
+  text-decoration: none;
+  box-shadow: 0 0 0 1px $gray;
+  cursor: pointer;
+  transition: box-shadow .2s ease-in-out;
+
+  span {
+    position: relative;
+    display: block;
+    opacity: 1;
+    transition: opacity .2s ease-in-out;
+  }
+
+  &:hover,
+  &:focus {
+    box-shadow: 0 0 0 1px $c-link;
+
+    span {
+      opacity: 0.9;
+    }
+  }
+
+  img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+}
+.slick-current .product-slider__nav-slider__item {
+  box-shadow: 0 0 0 1px $gray-dark;
+  cursor: default;
 }
 
 /**
