--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product--uh-axe.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product--uh-axe.html.twig
@@ -23,8 +23,8 @@
   {# Product teaser. #}
   <a href="{{ product_url }}" class="product product--teaser product--teaser--uh-axe" aria-label="{{ product_entity.title.value }}">
     <div class="product__thumbnail">
-      {% if product_image_thumb_url %}
-        <img src="{{ product_image_thumb_url }}" alt="{{ product_entity.title.value }}" />
+      {% if product.field_catalog_image %}
+        {{ product.field_catalog_image }}
       {% else %}
         <img src="{{ base_path ~ directory }}/gfx/logo-icon.svg" class="no-product-thumbnail" alt="{{ product_entity.title.value }}" />
       {% endif %}
