Add fallback image for when product in cart has no image to display

--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_checkout.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_checkout.scss
@@ -140,6 +140,10 @@
 
           .product__thumbnail__cart {
             position: relative;
+            width: 80px;
+            height: 80px;
+            background: url(../gfx/logo-icon-watermark.svg) center center no-repeat;
+            background-size: 75px 75px;
 
             img {
               width: 80px;
