--- a/web/themes/custom/commerce_2_demo/sass/custom/_site_header.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_site_header.scss
@@ -453,6 +453,10 @@
 
             .product__thumbnail__cart {
               position: relative;
+              width: 40px;
+              height: 40px;
+              background: url(../gfx/logo-icon-watermark.svg) center center no-repeat;
+              background-size: 35px 35px;
 
               img {
                 width: 40px;
