--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
@@ -66,59 +66,69 @@
         {% endif %}
 
         <div class="col-sm-12 col-md-6">
-          <div class="{{ product_slider_class }}">
-            {# Main product image. #}
-            <div class="product-slider__main-slider">
-              {% for product_variation in product_variation_images %}
-                {% for product_variation_image in product_variation.images %}
-                  {# Set product thumbnail. #}
-                  {%
-                    set product_slider_image_thumbnail = {
-                    '#theme':      'image_style',
-                    '#style_name': 'product_large',
-                    '#uri':        product_variation_image.entity.uri.value,
-                    '#alt':        product_variation_image.alt,
-                  }
-                  %}
-                  <div>
-                    <div class="product-slider__main-slider__item">
-                      <a href="{{ file_url(product_variation_image.entity.uri.value) }}" class="magnific-popup-gallery">
+          {# Main product image - no slider. #}
+          {% if product_entity.bundle == 'mason_jar' %}
+            <div class="product-slider product-slider--no-thumbnails">
+              <div class="product-slider__main-slider__item">
+                {{ product.variation_field_image }}
+              </div>
+            </div>
+
+          {# Main product image - with slider. #}
+          {% else %}
+            <div class="{{ product_slider_class }}">
+              <div class="product-slider__main-slider">
+                {% for product_variation in product_variation_images %}
+                  {% for product_variation_image in product_variation.images %}
+                    {# Set product thumbnail. #}
+                    {%
+                      set product_slider_image_thumbnail = {
+                      '#theme':      'image_style',
+                      '#style_name': 'product_large',
+                      '#uri':        product_variation_image.entity.uri.value,
+                      '#alt':        product_variation_image.alt,
+                    }
+                    %}
+                    <div>
+                      <div class="product-slider__main-slider__item">
+                        <a href="{{ file_url(product_variation_image.entity.uri.value) }}" class="magnific-popup-gallery">
+                          <span>{{ product_slider_image_thumbnail }}</span>
+                        </a>
+                      </div>
+                    </div>
+                  {% endfor %}
+                {% endfor %}
+              </div>
+
+              {# Image thumbnails. #}
+              <div class="product-slider__nav-slider">
+                {% for product_variation in product_variation_images %}
+                  {% if product_variation.variation_id %}
+                    {% set product_variation_id = product_variation.variation_id %}
+                  {% else %}
+                    {% set product_variation_id = '' %}
+                  {% endif %}
+
+                  {% for product_variation_image in product_variation.images %}
+                    {# Set product thumbnail. #}
+                    {%
+                      set product_slider_image_thumbnail = {
+                      '#theme':      'image_style',
+                      '#style_name': 'product_thumb',
+                      '#uri':        product_variation_image.entity.uri.value,
+                      '#alt':        product_variation_image.alt,
+                    }
+                    %}
+                    <div>
+                      <a class="product-slider__nav-slider__item" data-product-variation-id="{{ product_variation_id }}">
                         <span>{{ product_slider_image_thumbnail }}</span>
                       </a>
                     </div>
-                  </div>
+                  {% endfor %}
                 {% endfor %}
-              {% endfor %}
+              </div>
             </div>
-
-            {# Image thumbnails. #}
-            <div class="product-slider__nav-slider">
-              {% for product_variation in product_variation_images %}
-                {% if product_variation.variation_id %}
-                  {% set product_variation_id = product_variation.variation_id %}
-                {% else %}
-                  {% set product_variation_id = '' %}
-                {% endif %}
-
-                {% for product_variation_image in product_variation.images %}
-                  {# Set product thumbnail. #}
-                  {%
-                    set product_slider_image_thumbnail = {
-                    '#theme':      'image_style',
-                    '#style_name': 'product_thumb',
-                    '#uri':        product_variation_image.entity.uri.value,
-                    '#alt':        product_variation_image.alt,
-                  }
-                  %}
-                  <div>
-                    <a class="product-slider__nav-slider__item" data-product-variation-id="{{ product_variation_id }}">
-                      <span>{{ product_slider_image_thumbnail }}</span>
-                    </a>
-                  </div>
-                {% endfor %}
-              {% endfor %}
-            </div>
-          </div>
+          {% endif %}
         </div>
         {# Product intro (w/ product images). #}
         <div class="col-sm-12 col-md-6">
