--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product--uh-axe.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product--uh-axe.html.twig
@@ -20,8 +20,17 @@
  */
 #}
 {% if view_mode == 'teaser' %}
+
+  {%
+    set classesTeaser = [
+      'product',
+      'product--teaser',
+      'product--teaser--' ~ product_entity.title.value|clean_class
+    ]
+  %}
+
   {# Product teaser. #}
-  <a href="{{ product_url }}" class="product product--teaser product--teaser--uh-axe" aria-label="{{ product_entity.title.value }}">
+  <a href="{{ product_url }}" {{ attributes.addClass(classesTeaser) }} aria-label="{{ product_entity.title.value }}">
     <div class="product__thumbnail">
       {% if product.field_catalog_image|render|trim is not empty %}
         {{ product.field_catalog_image }}
@@ -40,8 +49,16 @@
 
 {% else %}
 
+  {%
+    set classesFull = [
+      'product',
+      'product--full',
+      'product--full--' ~ product_entity.title.value|clean_class
+    ]
+  %}
+
   {# Product full page. #}
-  <article{{ attributes }} class="product product--full product--full--uh-axe">
+  <article{{ attributes.addClass(classesFull) }}>
 
     {# Page title rendered here but then moved with jQuery. #}
     <h1 class="page-title">{{ product_entity.title.value }}</h1>
