--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-recurring-digital.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-recurring-digital.scss
@@ -556,6 +556,7 @@
   .interface__slideshow-link {
     position: relative;
     display: block;
+    outline: none;
 
     .interface__slideshow-prompt {
       position: absolute;
