Minor page backgound style update and checkout tour text update.

--- a/web/themes/custom/commerce_2_demo/sass/custom/_general.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_general.scss
@@ -11,6 +11,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   min-width: $screen-min;
+  background: #fff;
 
   &.cke_editable {
     padding: 20px;
