Add initial libraries, templates and styling for DrupalCon preorder

--- a/web/themes/custom/commerce_2_demo/sass/custom/_general.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_general.scss
@@ -243,6 +243,13 @@ a {
   font-size: 24px;
 }
 
+// Button disabled.
+.btn.disabled, .btn[disabled], fieldset[disabled] .btn {
+  background-color: $gray;
+  border-color: $gray;
+  pointer-events: none;
+}
+
 /**
  * Tabs.
  */
