--- a/web/themes/custom/commerce_2_demo/sass/custom/style.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/style.scss
@@ -21,6 +21,7 @@
 @import 'pages/product';
 @import 'pages/product_uh-axe';
 @import 'pages/product_uh-recurring-digital';
+@import 'pages/product_drupalcon-preorder';
 @import 'pages/checkout';
 @import 'pages/user';
 
