Complete DrupalCon preorder page templates and styling

--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_drupalcon-preorder.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_drupalcon-preorder.scss
@@ -54,3 +54,16 @@
     display: none;
   }
 }
+
+/**
+ * Checkout complete.
+ */
+
+.checkout-complete__drupalcon-preorder {
+  .instructions {
+    display: block;
+    padding-top: 15px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid $gray-light;
+  }
+}
