--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-checkout-completion-message.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-checkout-completion-message.html.twig
@@ -71,11 +71,16 @@
     <h2>{{ 'Your preorder has been placed! Awesome!'|t }}</h2>
     <div class="checkout-complete__drupalcon-preorder">
       {% trans %}
-      <p>Hold on to your order number (<strong>{{ order_entity.getOrderNumber }}</strong>)!</p>
+      <span class="instructions"><strong>Instructions:</strong></span>
 
-      <p><strong>At DrupalCon Nashville, visit the Acro Media booth (#803, 805) and claim your free shirt!</strong> All we need is you order number verify your preorder. Slick!</p>
+      <p>At DrupalCon Nashville, visit the Acro Media booth (#803, 805) and claim your free shirt! All we need is one of the following:</p>
 
-      <p>There will be a bunch of us at the booth so don’t be shy. In fact, <a href="https://blog.acromedia.com/catch-up-with-acro-media-at-drupalcon-2018-in-nashville-tn" target="_blank"></a>take a look</p> at who from Acro Media is going. We’re all friendly.</p>
+      <ul>
+        <li>Your order number ({{ order_entity.getOrderNumber }}).</li>
+        <li>The email address that you used to checkout with.</li>
+      </ul>
+
+      <p>There will be a bunch of us at the booth, so don’t be shy. In fact, <a href="https://blog.acromedia.com/catch-up-with-acro-media-at-drupalcon-2018-in-nashville-tn" target="_blank">take a look</a> at who from Acro Media will be there. We’re all friendly.</p>
       {% endtrans %}
     </div>
   {% endif %}
