--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_drupalcon-preorder.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_drupalcon-preorder.scss
@@ -34,6 +34,12 @@
       visibility: hidden;
     }
   }
+
+  // Validation messages.
+  .drupalcon-preorder__username,
+  .drupalcon-preorder__out-of-stock {
+    color: #a94442;
+  }
 }
 
 
