Update Guided Tours popup introduction text

--- a/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
@@ -139,9 +139,7 @@
       </div>
       <div class="modal-body">
         <p>
-          <strong>{{ 'Welcome to the Drupal Commerce 2 demo site!'|t }}</strong>
-          <br>
-          {{ 'Select a guided feature tour below OR close the window and look around.'|t }}
+          {{ 'Select a guided tour below OR close the window and look around.'|t }}
         </p>
 
         <button type="button" class="btn btn-primary" id="homepageTour">
