--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-pado-addon-product-variation-label.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-pado-addon-product-variation-label.html.twig
@@ -9,5 +9,33 @@
  * @ingroup themeable
  */
 #}
-<div class="add-on-item__label">{{ variation_entity.label }}</div>
-<div class="add-on-item__price">{{ variation_entity.getPrice|commerce_price_format }}</div>
+
+{# If variation has an image, use it. If not, use product iamge. #}
+{% if variation_entity.field_image.entity.fileuri %}
+  {% set image = {
+    '#theme':      'image_style',
+    '#style_name': 'thumbnail',
+    '#uri':        variation_entity.field_image.entity.fileuri,
+    '#attributes': { class: 'add-on-item__image' },
+  } %}
+{% else %}
+  {% set image = {
+    '#theme':      'image_style',
+    '#style_name': 'thumbnail',
+    '#uri':        product_entity.field_catalog_image.entity.fileuri,
+    '#attributes': { class: 'add-on-item__image' },
+  } %}
+{% endif %}
+
+<div class="add-on-item add-on-item--variation">
+  <div class="add-on-item__image">{{ image }}</div>
+
+  <div class="add-on-item__content">
+    <div class="add-on-item__label">{{ variation_entity.label }}</div>
+    <div class="add-on-item__price">{{ variation_entity.getPrice|commerce_price_format }}</div>
+    <div class="add-on-item__actions">
+      <a class="btn btn-primary add-on-item__link add-on-item__link--add" href="#" target="_blank">{{ 'Add'|t }}</a>
+      <a class="btn btn-default add-on-item__link add-on-item__link--view" href="{{ path('entity.commerce_product.canonical', {'commerce_product': product_entity.id}) }}" target="_blank"><i class="fa fa-chevron-circle-right"></i> {{ 'View'|t }}</a>
+    </div>
+  </div>
+</div>
