--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
@@ -32,8 +32,8 @@
   {# Product teaser. #}
   <a href="{{ product_url }}" {{ attributes.addClass(classesTeaser) }} aria-label="{{ product_entity.title.value }}">
     {% if product.field_add_on_products.0 %}
-      <div class="corner-flag corner-flag--bundle">
-        <i class="fa fa-star"></i>
+      <div class="add-on-item__teaser-flag">
+        {{ 'Bundle <br> and Save!'|t }}
       </div>
     {% endif %}
 
