--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
@@ -31,7 +31,7 @@
 
   {# Product teaser. #}
   <a href="{{ product_url }}" {{ attributes.addClass(classesTeaser) }} aria-label="{{ product_entity.title.value }}">
-    {% if product.field_add_on_products.0 %}
+    {% if product.field_add_on_products['#items'] %}
       <div class="add-on-item__teaser-flag">
         {{ 'Bundle <br> and Save!'|t }}
       </div>
@@ -53,7 +53,6 @@
     {{ product.field_brand }}
     {{ product.field_artist }}
   </a>
-
 {% else %}
 
   {%
