Update product add-on teaser styling

--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
@@ -126,6 +126,7 @@
 
       // Fields.
       a.product--teaser {
+        position: relative;
         display: block;
         overflow: hidden;
         line-height: 1.3em;
