--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
@@ -624,7 +624,7 @@
     font-size: 15px;
   }
 
-  // Individual item.
+  // Individual item (default styling).
   div[class*="form-item-add-ons-items-add-ons-"] {
     display: inline-block;
     width: 100%;
@@ -634,14 +634,24 @@
     background: #fff;
     transition: border .2s ease, background .2s ease;
 
+    // Styling when checked.
     &.checked {
-      border: 1px solid $c-primary;
+      .add-on-item__content .add-on-item__link--add {
+        background-color: #333;
+        border-color: #333;
 
-      .add-on-item__content .add-on-item__link--add:before {
-        content: '\f056';
+        &:hover, &:focus, &.active {
+          background-color: #000;
+          border-color: #000;
+        }
+
+        &:before {
+          content: '\f056';
+        }
       }
     }
 
+    // Default stylng.
     input {
       display: none;
     }
@@ -684,7 +694,6 @@
 
         @media (max-width: $screen-xs-max) {
           width: 100%;
-          font-size: 14px;
         }
       }
 
@@ -692,16 +701,18 @@
         display: inline-block;
         width: 85px;
         vertical-align: top;
+        float: right;
         text-align: right;
         padding-bottom: 5px;
 
         @media (max-width: $screen-xs-max) {
           width: 100%;
           padding-bottom: 10px;
-          font-size: 14px;
           text-align: left;
         }
       }
+
+      .add-on-item__actions {}
 
       .add-on-item__link {
         padding: 2px 15px;
@@ -734,27 +745,39 @@
     width: 100%;
     margin: 0 0 10px !important;
 
+    // Overall product styling.
     .fieldset-legend {
       .add-on-item {
-        display: inline-block;
-        width: 100%;
-        padding: 5px 10px;
+        display: flex;
+        flex-wrap: wrap;
+        padding: 10px;
         border: 1px solid $gray;
         background: #fff;
       }
 
-      .add-on-item__label {
-        display: inline-block;
-        padding-right: 10px;
+      .add-on-item__image {
+        flex-basis: 50px;
+        margin-right: 10px;
+
+        img {
+          border: 1px solid $gray;
+        }
+      }
+
+      .add-on-item__link {
+        padding: 2px 15px;
+        margin-right: 5px;
+        font-size: 14px;
+
+        @media (max-width: $screen-xs-max) {
+          padding: 2px 8px;
+          margin-right: 2px;
+        }
       }
 
       // This element generated via jQuery in uh-pado.js.
-      .add-on-item__toggle {
+      .add-on-item__link--toggle {
         position: relative;
-        display: inline-block;
-        padding: 2px;
-        font-weight: normal;
-        font-size: 14px;
 
         &:before {
           position: relative;
@@ -765,6 +788,14 @@
         }
 
         &.active {
+          background-color: $c-link;
+          border-color: $c-link;
+
+          &:hover, &:focus {
+            background-color: $c-link-hover;
+            border-color: $c-link-hover;
+          }
+
           &:before {
             content: '\f139';
           }
@@ -772,20 +803,82 @@
       }
 
       // Hide elements we don't want.
-      .add-on-item__image,
       .add-on-item__price,
-      .add-on-item__link {
+      .add-on-item__link--add {
         display: none;
         visibility: hidden;
       }
     }
 
+    // Individual variation item styling.
     .fieldset-wrapper {
       display: none;
-      margin-top: 10px;
+      padding: 10px;
+      border: 1px solid $gray;
+      border-top: none;
+      background: #fff;
 
-      div[class*="form-item-add-ons-items-add-ons-"]:last-of-type {
-        margin-bottom: 0 !important;
+      div[class*="form-item-add-ons-items-add-ons-"] {
+        border: 0;
+        border-bottom: 1px dashed $gray;
+        padding: 3px 0 10px 0;
+
+        &:last-of-type {
+          margin-bottom: 0 !important;
+          border-bottom: none;
+          padding-bottom: 0;
+        }
+
+        &.checked {
+          border: 0;
+          border-bottom: 1px dashed $gray;
+
+          .add-on-item__content {
+            .add-on-item__label {
+              width: calc(100% - 202px);
+            }
+
+            .add-on-item__link--add:before {
+              content: '\f056';
+            }
+          }
+        }
+
+        .add-on-item__content {
+          flex-basis: 100%;
+        }
+
+        .add-on-item__label {
+          width: calc(100% - 170px);
+          font-size: 14px;
+
+          @media (max-width: $screen-xs-max) {
+            width: 100%;
+          }
+        }
+
+        .add-on-item__price {
+          float: none;
+          padding-right: 5px;
+        }
+
+
+        .add-on-item__actions {
+          position: relative;
+          top: -3px;
+          display: inline-block;
+          float: right;
+
+          @media (max-width: $screen-xs-max) {
+            float: none;
+            top: 0;
+          }
+
+          .add-on-item__link--view {
+            display: none;
+            visibility: hidden;
+          }
+        }
       }
     }
   }
