Update product variation add-on styling

--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
@@ -764,6 +764,10 @@
         }
       }
 
+      .add-on-item__label {
+        font-weight: 600;
+      }
+
       .add-on-item__link {
         padding: 2px 15px;
         margin-right: 5px;
