Update product variation add-on styling

--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
@@ -764,7 +764,12 @@
         }
       }
 
+      .add-on-item__content {
+        line-height: 1.2em;
+      }
+
       .add-on-item__label {
+        padding-bottom: 5px;
         font-weight: 600;
       }
 
